tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00100.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.c-testsuite/case_00100.c" (c, x86_64-unknown-linux-gnu)
fn foo() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %4 = alloca s32i, "__retval", align 4
    %5 = const 0 : s32i
    store %5, %4
    %6 = load %4 : s32i
    return %6
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    %2 = call @foo() : s32i [all]
    store %2, %0
    %3 = load %0 : s32i
    return %3
}
