tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00102.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.c-testsuite/case_00102.c" (c, x86_64-unknown-linux-gnu)
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s32i, "x", align 4
    %2 = const 0 : s32i
    store %2, %0
    %3 = const 1 : s32i
    store %3, %1, align 4
    scope {
        %6 = load %1 : s32i, align 4
        %7 = const 1 : s32i
        %8 = shift left %6, %7 : s32i
        %9 = const 2 : s32i
        %10 = cmp ne %8, %9 : bool
        if %10 {
            %11 = const 1 : s32i
            store %11, %0
            %12 = load %0 : s32i
            return %12
        }
        yield
    }
    %4 = const 0 : s32i
    store %4, %0
    %5 = load %0 : s32i
    return %5
}
