tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00106.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.c-testsuite/case_00106.c" (c, x86_64-unknown-linux-gnu)
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca rec_S2, "s2", align 4
    %2 = const 0 : s32i
    store %2, %0
    %3 = const 1 : s32i
    %4 = get_member %1[0] "s1" : rec_S1*
    %5 = get_member %4[0] "x" : s32i*
    store %3, %5, align 4
    %6 = const 0 : s32i
    store %6, %0
    %7 = load %0 : s32i
    return %7
}
